--- a/estilo1.css
+++ b/estilo1.css
@@ -48,3 +48,23 @@ a {
     height: 300px;
     border: 2px solid blue;
 }
+a {
+    text-decoration: none;
+}
+a:link {
+    color: purple;
+    font-size: 2em;
+}
+a:visited {
+    color: grey;
+}
+a:hover {
+    color: red;
+    font-size: 20pt;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: yellow;
+}
+a:active {
+    color: green;
+    font-weight: bold;
+}
