--- a/estilo2.css
+++ b/estilo2.css
@@ -40,3 +40,27 @@ table,th,td {
 #retrato {
     width: 30%;
 }
+a {
+    text-decoration: none;
+}
+a:link {
+    text-decoration: none;
+    font-size: 1.5em;
+    color: green;
+}
+a:visited {
+    color: green;
+    font-style: italic;
+}
+a:hover {
+    color: orange;
+    background-color: green;
+    font-size: 18pt;
+    font-family: Arial, Helvetica, sans-serif bold;
+    font-weight: bold;
+}
+a:active {
+    color: red;
+    font-weight: bold;
+    font-size: 14pt;
+}
